# new-ventas-whatever

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.es.md  README.md  alembic.ini  build_output.txt  cli.py  conda.txt  current_errors.txt  docker-compose.yaml  environment.yml  final_check.txt  latest_errors.txt  main.py  mypy.ini  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_prod.txt  rolldown.config..mjs  rolldown.config.admin.mjs  rolldown.config.app.mjs  rolldown.config.mjs  start.sh  tailwind.config.js  test.txt  tsconfig.json  type_errors.md  type_errors_list.txt  type_errors_list_src.txt
core/cli/: generate_module.py  generate_plugin.py  generate_socket.py  generate_webhook.py
core/config/: settings.py
core/database/: __init__.py  models_registry.py
core/database/exceptions/: __init__.py
core/database/utils/: __init__.py  get_pagination_by_model.py
core/events/: __init__.py
core/events/base/: event.py
core/events/types/: __init__.py  channel_event.py  event.py
core/events/utils/: type_check.py
core/lib/base/: cache_provider.py
core/lib/consts/: template.py
core/lib/decorators/: __init__.py  cache.py  events.py  exceptions.py  http_methods.py  services.py  ws.py
core/lib/dependencies/: cache.py
core/lib/hooks/: lifespan.py  wrapper.py
core/lib/http/: errors.py
core/lib/register/: __init__.py  auto_router_api.py  auto_router_partials.py  auto_router_sockets.py  auto_router_templates.py  controller.py  exceptions.py  extension.py  extension_loader.py  partial.py  plugin.py  plugin_loader.py  service.py  template.py  websocket.py  wrapper_openapi.py
core/migrations/: env.py
core/migrations/versions/: 0c68a46a4a24_initial_migration.py  15a28bdc8b2e_refactor_remaining_pivot_tables_to_.py  305d9cbda18c_optimize_indexes.py  34ce3f3697d6_added_find_by_column_in_user_model.py  3802167d77fc_remove_permissions_from_role_and_.py  38e388bb1ffa_initial_reconstruction.py  4b013e168101_optimize_indexes.py  560dbb8caa45_add_context_to_permissions_table.py  5f89fc039631_add_index_to_comparation_values_context_.py  690d367789e6_merge_heads.py  78e7a0e4063a_sync_models_with_dbml_pivot_meta_.py  953db610c518_add_balance_type_enum.py  afa826b83d3c_initial_schema_with_cascade.py  b5f528968f67_add_decorators_balances_and_is_reactive.py  c19c892c6459_feat_historical_comparison_uses_ref_.py  d69683ffa8e6_add_comparison_value_decorators_tables.py  d8b450ff3903_add_index_to_comparation_values_context.py  e334b0c44583_add_ref_business_entity_to_values.py  f0987f3285a9_initial_reconstruction.py
core/security/csrf/: csrf.py  middleware.py  setting.py
core/security/guards/: __init__.py  extension.py  settings.py
core/security/shield/: __init__.py  errors.py  provider.py  registry.py  scanner.py  shield.py  shield_group.py  types.py
core/services/permissions/: __init__.py
core/services/ui/: enqueue_css.py  enqueue_js.py
core/tests/: test_shield.py
core/types/ui/: templates.py
core/utils/fastapi/: auto_router_templates.py  fastapi_class.py  import_webhooks.py
docs/: ER_db_diagram.dbml
docs/backend/: Cache.md  Endpoints.md  Security.md  Shield-dict-result.md
docs/frontend/: Folder-Arquitecture.md
docs/frontend/arquitecture/: Package.md  Render-and-backend.md
docs/proposals/: README.md
docs/shared/: Concepts.md  Exceptions.md  Fastapi-injectable.md  Services.md  Tests.md  preparations_bom_design.md
extension/fastapi-guard/: fastapi-guard.py  settings.py
extension/fastapi-plugins/: fastapi-plugins.py
extension/preload-models/: preload-models.py
plugins/admin_core/: admin_core.py  package.json  rolldown.config.admin.mjs  rolldown.config.mjs
plugins/chinese_restaurant/: chinese_restaurant.py
plugins/memcached/: memcached.py  settings.py
plugins/redis/: redis.py  settings.py
plugins/redis/includes/: privider.py  (+1 more)
scratch/: check_global.py  check_hierarchy.py  update_templates.py  verify_search_service.py
src/tests/: test_shield.py
(+385 files in other folders)
