[project]
name = "new-finance-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiojobs==1.4.0",
    "aiomcache==0.8.2",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "apscheduler==3.11.2",
    "asyncpg==0.31.0",
    "attrs==26.1.0",
    "authlib==1.7.0",
    "bcrypt==5.0.0",
    "bidict==0.23.1",
    "botocore==1.42.94",
    "cachetools==7.0.6",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "colorama==0.4.6",
    "cryptography==46.0.7",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "dnspython==2.4.2",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "eventlet==0.41.0",
    "exceptiongroup==1.2.0",
    "fastapi==0.136.0",
    "fastapi-guard==5.0.0",
    "fastapi-injectable==1.4.7",
    "fastapi-plugins==0.14.0",
    "fastapi-restful==0.6.0",
    "fastcore==1.12.40",
    "frozenlist==1.8.0",
    "greenlet==3.4.0",
    "guard-core==1.0.3",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "hiredis==3.3.1",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.13",
    "imageio==2.37.3",
    "injector==0.24.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.14.0",
    "jmespath==1.1.0",
    "joserfc==1.6.4",
    "libcst==1.8.6",
    "loguru==0.7.3",
    "lxml==6.1.0",
    "mako==1.3.11",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "marshmallow-enum==1.5.1",
    "maxminddb==3.1.1",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "numpy==2.4.4",
    "oauthlib==3.3.1",
    "openai==2.32.0",
    "orjson==3.11.8",
    "outcome==1.3.0.post0",
    "packaging==26.0",
    "passlib==1.7.4",
    "pathspec==1.0.4",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "prometheus-client==0.25.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "propcache==0.4.1",
    "proto-plus==1.27.2",
    "protobuf==7.34.1",
    "psutil==5.9.8",
    "psycopg2-binary==2.9.12",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.0",
    "pygments==2.20.0",
    "pyjwt==2.12.1",
    "pymysql==1.1.2",
    "pyotp==2.9.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-engineio==4.9.1",
    "python-jose==3.5.0",
    "python-json-logger==4.1.0",
    "python-multipart==0.0.26",
    "python-socketio==5.11.3",
    "pyyaml==6.0.3",
    "qrcode==8.2",
    "redis==4.6.0",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "rfc3986==2.0.0",
    "rich==15.0.0",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "rsa==4.9.1",
    "s3transfer==0.16.1",
    "sentry-sdk==2.58.0",
    "shellingham==1.5.4",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.23",
    "sqlalchemy-utils==0.42.1",
    "starlette==0.52.1",
    "starlette-csrf==3.0.0",
    "tenacity==9.1.4",
    "tomli==2.4.1",
    "tomli-w==1.2.0",
    "tqdm==4.67.3",
    "trio==0.33.0",
    "trio-websocket==0.12.2",
    "typeguard==4.5.1",
    "typer==0.24.2",
    "typer-slim==0.24.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "tzlocal==5.3.1",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uv==0.11.7",
    "uvicorn==0.24.0.post1",
    "watchdog==6.0.0",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "win32-setctime==1.2.0",
    "wsproto==1.3.2",
    "yarl==1.23.0",
    "zstandard==0.25.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.35",
]
